# gnome-pomodoro

./: meson.build
data/: meson.build
data/icons/: meson.build
data/sounds/: meson.build
lib/: meson.build
plugins/: meson.build
plugins/actions/: meson.build
plugins/builtin/: meson.build
plugins/dark-theme/: meson.build
plugins/gnome/: meson.build
plugins/gnome/extension/: meson.build
plugins/indicator/: meson.build
plugins/indicator/icons/: meson.build
plugins/sounds/: meson.build
po/: meson.build
src/: meson.build
vapi/: config.vapi
